<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bbackground"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/text_pertanyaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/gejala"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_blue_primary"
                android:fontFamily="@font/mregular"
                android:text="@string/ya"
                android:textColor="@color/white"
                app:backgroundTint="@color/bluePrimary" />

            <Button
                android:id="@+id/btn_tidak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_gray_secondary"
                android:text="@string/tidak"
                android:textColor="@color/grayTersier"
                app:backgroundTint="@color/graySecondary" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>