<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:background="@drawable/bg_gradient_primary_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="161dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/facecarewhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/mregular"
        android:text="@string/my_dashboard"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="30dp"
        android:paddingRight="24dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mregular"
            android:text="@string/menu_utama"
            android:textColor="@color/blackPrimary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/mlight"
            android:text="@string/selamat_datang_user"
            android:textColor="@color/grayPrimary"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="#EDEDED" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">


                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/fc" />

                <Button
                    android:id="@+id/btn_diagnosa_forward"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/white"
                    android:fontFamily="@font/mregular"
                    android:text="@string/diagnosa_cepat"
                    android:textColor="@color/blackPrimary"
                    android:textSize="8sp"
                    app:backgroundTint="@color/white" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">


                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/cf" />

                <Button
                    android:id="@+id/btn_diagnosa_cf"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/white"
                    android:fontFamily="@font/mregular"
                    android:text="@string/diagnosa_akurat"
                    android:textColor="@color/blackPrimary"
                    android:textSize="7sp"
                    app:backgroundTint="@color/white" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">


                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/icon_riwayat" />

                <Button
                    android:id="@+id/btn_riwayat"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_btn_white_primary"
                    android:fontFamily="@font/mregular"
                    android:text="@string/riwayat_diagnosa"
                    android:textColor="@color/blackPrimary"
                    android:textSize="6sp"
                    app:backgroundTint="@color/white" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables,UselessParent">


                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/icon_logout" />

                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="31dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_btn_white_primary"
                    android:fontFamily="@font/mregular"
                    android:text="@string/logout"
                    android:textColor="@color/blackPrimary"
                    android:textSize="7sp"
                    app:backgroundTint="@color/white" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">


                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/icon_penyakit" />

                <Button
                    android:id="@+id/btn_penyakit"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_btn_white_primary"
                    android:fontFamily="@font/mregular"
                    android:text="@string/daftar_penyakit"
                    android:textColor="@color/blackPrimary"
                    android:textSize="7sp"
                    app:backgroundTint="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">


                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/icon_informasi" />

                <Button
                    android:id="@+id/btn_panduanuser"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_btn_white_primary"
                    android:fontFamily="@font/mregular"
                    android:text="@string/informasi_user"
                    android:textColor="@color/blackPrimary"
                    android:textSize="7sp"
                    app:backgroundTint="@color/white" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>








